force-app/main/default/objects/vf_Certification__c/vf_Certification__c.object-meta.xml
<CustomObject>
    <label>Certification</label>
    <pluralLabel>Certifications</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Certification Number</label>
        <displayFormat>CERT-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer certifications</description>
</CustomObject>