force-app/main/default/objects/vf_Certification__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <length>255</length>
    <type>Text</type>
    <description>Type or name of the certification</description>
    <inlineHelpText>The type or name of this certification</inlineHelpText>
</CustomField>