force-app/main/default/objects/vf_Certification__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
    <description>Date the certification expires</description>
    <inlineHelpText>The date when this certification will expire (if applicable)</inlineHelpText>
</CustomField>