force-app/main/default/objects/vf_Certification__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>Issue Date</label>
    <type>Date</type>
    <description>Date the certification was issued</description>
    <inlineHelpText>The date when this certification was issued</inlineHelpText>
</CustomField>