force-app/main/default/objects/vf_Certification__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Certifications</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <type>Lookup</type>
    <description>Volunteer who earned the certification</description>
    <inlineHelpText>The volunteer who earned this certification</inlineHelpText>
</CustomField>